--- a/Public/index.html
+++ b/Public/index.html
@@ -71,4 +71,147 @@
         </li>
       </ul>
     </nav>
+    <!-- Sección Principal -->
+    <main>
+      <div class="Seccion-principal">
+        <div class="text-content">
+          <h2>ACCESO SIN BARRERAS, MOVILIDAD PARA TODOS</h2>
+          <p>
+            Centralizamos y actualizamos información sobre la accesibilidad en
+            transporte público, calles, edificios y servicios públicos para
+            reducir barreras y fomentar una mayor equidad en la movilidad de
+            personas con discapacidades.
+          </p>
+          <a href="CrearCuenta-HTML.html">
+            <button class="cta-button">CREAR CUENTA</button>
+          </a>
+          <h3>SOBRE LA APLICACIÓN</h3>
+        </div>
+        <div class="image">
+          <img
+            src="Assets/images/pngwing.com (1).png"
+            alt="Persona ayudando a un anciano en silla de ruedas"
+          />
+        </div>
+      </div>
+      <div class="TABS">
+        <a href="#Servicios-Includer" class="tab">SERVICIOS</a>
+        <a href="#Nosotros-Includer" class="tab">NOSOTROS</a>
+        <a href="SoporteTécnico-HTML.html" class="tab">SOPORTE</a>
+      </div>
+    </main>
+    <!--Banner flotante de redes sociales-->
+    <div class="Container_SN">
+      <ul class="Banner_SN">
+        <li>
+          <img
+            src="Assets/images/icons8-facebook-nuevo-48.png"
+            width="36"
+            height="36"
+          />
+          <p>
+            <a href="Pagina Oficial" target="_blank"
+              >Danos un like<br />Facebook</a
+            >
+          </p>
+        </li>
+        <li>
+          <img
+            src="Assets/images/icons8-instagram-48.png"
+            width="36"
+            height="36"
+          />
+          <p>
+            <a href="Pagina Oficial" target="_blank"
+              >Danos un like<br />Instagram</a
+            >
+          </p>
+        </li>
+        <li>
+          <img
+            src="Assets/images/icons8-twitterx-50.png"
+            width="36"
+            height="36"
+          />
+          <p>
+            <a href="Pagina Oficial" target="_blank"
+              >Danos un like<br />Twitter X</a
+            >
+          </p>
+        </li>
+        <li>
+          <img
+            src="Assets/images/icons8-tik-tok-48.png"
+            width="36"
+            height="36"
+          />
+          <p>
+            <a href="Pagina Oficial" target="_blank"
+              >Danos un like<br />TikTok</a
+            >
+          </p>
+        </li>
+        <li>
+          <img
+            src="Assets/images/icons8-youtube-48.png"
+            width="36"
+            height="36"
+          />
+          <p>
+            <a href="Pagina Oficial" target="_blank"
+              >Danos un like<br />Youtube</a
+            >
+          </p>
+        </li>
+      </ul>
+    </div>
+    <!--Section Servicios-->
+    <section class="Servicios">
+      <div class="barra-degradado"></div>
+      <div id="Servicios-Includer">
+        <h3>SERVICIOS</h3>
+        <p>
+          Includer ofrece información sobre accesibilidad en transporte, calles
+          y edificios, con mapas interactivos de lugares accesibles. Incluye un
+          sistema de evaluación por usuarios y guías de planificación urbana
+          para fomentar espacios inclusivos.
+        </p>
+        <a href="CrearCuenta-HTML.html" class="tab-serv">REGÍSTRATE</a>
+      </div>
+    </section>
+    <!--Section Nosotros-->
+    <section class="Nosotros">
+      <div class="barra-degradado"></div>
+      <div id="Nosotros-Includer">
+        <div class="text-content">
+          <h3>NOSOTROS</h3>
+          <p>
+            En Tech Devs, somos un equipo comprometido en desarrollar soluciones
+            tecnológicas innovadoras para mejorar la accesibilidad en las
+            ciudades. Nuestro principal objetivo es facilitar la movilidad de
+            las personas con discapacidad a través de nuestra plataforma
+            INCLUDER, que ofrece información actualizada sobre la accesibilidad
+            en transporte público, calles, edificios y servicios. Creemos
+            firmemente en la inclusión y trabajamos para crear un entorno urbano
+            más equitativo y accesible para todos.
+          </p>
+        </div>
+        <div class="imagen">
+          <img
+            src="Assets/images/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
+            alt="Persona ayudando a un anciano en silla de ruedas"
+          />
+        </div>
+      </div>
+    </section>
+    <section class="Nosotros-tabs">
+      <div class="text-content">
+        <div class="tabs">
+          <a href="MapaInteractivo-HTML.html" class="tab">MAPA INTERACTIVO</a>
+          <a href="Evaluaciones-HTML.html" class="tab">EVALUACIONES</a>
+          <a href="Recursos-HTML.html" class="tab">RECURSOS</a>
+        </div>
+        <h1>¡HACIA UNA MOVILIDAD SIN LÍMITES PARA TODAS LAS PERSONAS!</h1>
+      </div>
+    </section>
 
