--- a/Public/index.html
+++ b/Public/index.html
@@ -214,4 +214,50 @@
         <h1>¡HACIA UNA MOVILIDAD SIN LÍMITES PARA TODAS LAS PERSONAS!</h1>
       </div>
     </section>
-
+    <!-- PIE DE PAGINA -->
+    <footer class="footer-section">
+      <div class="footer-container">
+        <div class="footer-column">
+          <h3>
+            <img
+              src="Assets/images/LOGO_INCLUDER-removebg-preview (4).png"
+              alt="Logo Includer"
+              style="width: 40px; vertical-align: middle; margin-right: 10px"
+            />
+            INCLUDER
+          </h3>
+          <ul>
+            <li><a href="#">Copyright © 2024 Includer.</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h3>EMPRESA</h3>
+          <ul>
+            <li><a href="#">Acerca de Nosotros</a></li>
+            <li><a href="#">Contáctanos</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h3>SOPORTE</h3>
+          <ul>
+            <li><a href="#">Centro de Ayuda</a></li>
+            <li><a href="#">Términos de Servicio</a></li>
+            <li><a href="#">Legal</a></li>
+            <li><a href="#">Política de Privacidad</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h3>MANTENTE AL DÍA</h3>
+          <form>
+            <input
+              type="email"
+              placeholder="Tu correo electrónico"
+              class="email-input"
+            />
+          </form>
+        </div>
+      </div>
+    </footer>
+  </body>
+  <script src="Assets/scripts/main.js"></script>
+</html>
