--- a/Public/Recursos-HTML.html
+++ b/Public/Recursos-HTML.html
@@ -71,3 +71,52 @@
         </li>
       </ul>
     </nav>
+
+    <!-- Main Content -->
+    <main>
+    <div class="container">
+      <br><br>
+      <h1>RECURSOS</h1>
+      </div>
+      <div class="content">
+        <div class="text-box">
+          <h2>
+            ¡Aprovecha al máximo Includer con nuestras guías y tutoriales!
+          </h2>
+          <p>
+            Aquí encontrarás guías detalladas y videos tutoriales que te
+            enseñarán a utilizar todas las funcionalidades de Includer, desde el
+            uso del Mapa Interactivo hasta la manera de dejar evaluaciones sobre
+            la accesibilidad en los lugares que visitas.
+          </p>
+        </div>
+        <div class="video-section">
+          <h2>VIDEOS TUTORIALES</h2>
+          <div class="video-container">
+            <br>
+            <iframe
+              src="https://www.youtube.com/embed/pjeLyZFeMIo"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <p>¿Cómo usar el Mapa Interactivo?</p>
+        </div>
+      </div>
+      <br>
+      <div class="guides">
+        <h2>GUÍAS DETALLADAS</h2>
+        <ul>
+          <li>Navegando el Mapa Interactivo ▶</li>
+          <li>Evaluaciones y cómo contribuir ▶</li>
+          <li>Accesibilidad en el transporte público ▶</li>
+        </ul>
+        <div class="recur-img">
+        <a href="#"><img src="Assets/images/discapacitados (1).png" alt="Discapacitados conversando" /></a>
+      </div>
+      </div>
+    </div>
+  </main>
+  <br><br>
+
