--- a/Public/Recursos-HTML.html
+++ b/Public/Recursos-HTML.html
@@ -118,5 +118,53 @@
       </div>
     </div>
   </main>
+      <!-- PIE DE PAGINA -->
+  <footer class="footer-section">
+    <div class="footer-container">
+      <div class="footer-column">
+        <h3>  
+          <a href="index.html"">
+              <img
+                src="Assets/images/LOGO_INCLUDER-removebg-preview (4).png"
+                alt="Logo Includer"
+                style="width: 40px; vertical-align: middle; margin-right: 10px"
+              />
+            </a>
+           INCLUDER</h3>
+        <ul>
+          <li><a href="#">Copyright © 2024 Includer.</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3>Empresa</h3>
+        <ul>
+          <li><a href="#">Acerca de Nosotros</a></li>
+          <li><a href="#">Contáctanos</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3>Soporte</h3>
+        <ul>
+          <li><a href="#">Centro de Ayuda</a></li>
+          <li><a href="#">Términos de Servicio</a></li>
+          <li><a href="#">Legal</a></li>
+          <li><a href="#">Política de Privacidad</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3>Mantente al día</h3>
+        <form>
+          <input
+            type="email"
+            placeholder="Tu correo electrónico"
+            class="email-input"
+          />
+        </form>
+      </div>
+    </div>
+  </footer>
+  </body>
+  <script src="Assets/scripts/Recursos-JS.js"></script>    
+</html>
   <br><br>
 
