--- a/Public/Contáctanos-HTML.html
+++ b/Public/Contáctanos-HTML.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="Favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="Assets/styles/Contáctanos-CSS.css" />
   </head>
+  <!--ENCABEZADO-->
   <body>
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
