División del contenido en la pantalla Contáctanos

--- a/Public/Contáctanos-HTML.html
+++ b/Public/Contáctanos-HTML.html
@@ -64,6 +64,7 @@
             </li>
           </ul>
         </nav>
+    <!--CONTENIDO-->
     <!-- Sección Principal -->
     <!--SECTION FORMULARIO-->
     <section class="Contactanos-Section">
