--- a/Public/Contáctanos-HTML.html
+++ b/Public/Contáctanos-HTML.html
@@ -198,6 +198,7 @@
         </div>
       </div>
     </section>
+    <!--PIE DE PÁGINA-->
     <footer class="footer-section">
       <div class="footer-container">
         <div class="footer-column">
