--- a/Public/MapaInteractivo-HTML.html
+++ b/Public/MapaInteractivo-HTML.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="Favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="Assets/styles/Mapainteractivo-CSS.css" />
   </head>
+  <!--ENCABEZADO-->
   <body>
     <!-- Barra Superior -->
     <div class="barra-superior">
