--- a/Public/MapaInteractivo-HTML.html
+++ b/Public/MapaInteractivo-HTML.html
@@ -71,6 +71,7 @@
         </li>
       </ul>
     </nav>
+    <!--CONTENIDO-->
     <!-- Sección Principal -->
     <main>
       <div class="titulo">
