--- a/Public/MapaInteractivo-HTML.html
+++ b/Public/MapaInteractivo-HTML.html
@@ -122,7 +122,7 @@
         </div>
       </div>
     </main>
-    <!-- PIE DE PAGINA -->
+    <!--PIE DE PÁGINA-->
     <footer class="footer-section">
       <div class="footer-container">
         <div class="footer-column">
