División del encabezado en la pantalla Nuestros Servicios

--- a/Public/NuestrosServicios-HTML.html
+++ b/Public/NuestrosServicios-HTML.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="Assets/styles/NuestrosServicios-CSS.css" />
     <title>Nuestros Servicios</title>
   </head>
+  <!--ENCABEZADO-->
   <body>
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
