División del pie de página en la pantalla Nuestros Servicios

--- a/Public/NuestrosServicios-HTML.html
+++ b/Public/NuestrosServicios-HTML.html
@@ -119,6 +119,7 @@
         </div>
       </div>
     </section>
+    <!--PIE DE PÁGINA-->
     <footer class="footer-section">
       <div class="footer-container">
         <div class="footer-column">
