--- a/Public/SoporteTécnico-HTML.html
+++ b/Public/SoporteTécnico-HTML.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="Favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="Assets/styles/SoporteTécnico-CSS.css" />
   </head>
+  <!--ENCABEZADO-->
   <body>
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
