--- a/Public/SoporteTécnico-HTML.html
+++ b/Public/SoporteTécnico-HTML.html
@@ -70,7 +70,7 @@
       </ul>
     </nav>
     </header>
-
+    <!--CONTENIDO-->
     <div class="container">
       <div class="section">
         <br />
