División del pie de página en la pantalla Soporte Técnico

--- a/Public/SoporteTécnico-HTML.html
+++ b/Public/SoporteTécnico-HTML.html
@@ -115,7 +115,7 @@
       </div>
     </div>
     <br />
-    <!-- PIE DE PAGINA -->
+    <!--PIE DE PÁGINA-->
     <footer class="footer-section">
       <div class="footer-container">
         <div class="footer-column">
